<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henrique.calculamdia.PesosActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/edit_peso01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_01"
            android:inputType="textShortMessage"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/edit_peso02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_02"
            android:inputType="textShortMessage"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/calcular"
        android:onClick="calcular"/>

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/cancelar"
        android:onClick="calcular"/>


    <TextView
        android:id="@+id/tv_nota01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_nota02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textSize="17sp" />

</LinearLayout>
