<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henrique.calculamdia.NotasActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/edit_nota01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota01"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/edit_nota02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota02"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_calcular_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/calcular_media"
        android:onClick="calcularMedia"/>

</LinearLayout>
